--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,15 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
-    compileOptions{
+    compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+
     defaultConfig {
         applicationId "com.example.benzinpreise"
-        minSdkVersion 16
+        minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -38,4 +39,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
